allow for per workflow engine ELF

--- a/engine/src/main/resources/application.conf
+++ b/engine/src/main/resources/application.conf
@@ -193,6 +193,15 @@ backend {
   }
 }
 
+filesystems {
+  "gcs" {
+    auth = ""
+  }
+  "local" {
+
+  }
+}
+
 services {
   KeyValue {
     class = "cromwell.services.KeyValueServiceActor"
