Make workflow submission async. Closes #1114

--- a/core/src/main/resources/application.conf
+++ b/core/src/main/resources/application.conf
@@ -52,8 +52,14 @@ system {
   // Max number of retries per job that the engine will attempt in case of a retryable failure received from the backend
   max-retries = 10
 
-  //If 'true' then when Cromwell starts up, it tries to restart incomplete workflows
+  // If 'true' then when Cromwell starts up, it tries to restart incomplete workflows
   workflow-restart = true
+
+  // Cromwell will fetch N submitted workflows at a time. That number is tunable here
+  max-workflows-to-launch = 50
+
+  // Number of seconds between workflow pulls
+  new-workflow-poll-rate = 20
 }
 
 workflow-options {
