--- a/core/src/main/resources/application.conf
+++ b/core/src/main/resources/application.conf
@@ -55,10 +55,10 @@ system {
   // If 'true' then when Cromwell starts up, it tries to restart incomplete workflows
   workflow-restart = true
 
-  // Cromwell will fetch N submitted workflows at a time. That number is tunable here
+  // Cromwell will launch up to N submitted workflows at a time. That number is tunable here
   max-workflows-to-launch = 50
 
-  // Number of seconds between workflow pulls
+  // Number of seconds between workflow launches
   new-workflow-poll-rate = 20
 }
 
