code review, NEL-ing it up

--- a/core/src/main/resources/application.conf
+++ b/core/src/main/resources/application.conf
@@ -55,7 +55,7 @@ system {
   // If 'true' then when Cromwell starts up, it tries to restart incomplete workflows
   workflow-restart = true
 
-  // Cromwell will launch up to N submitted workflows at a time. That number is tunable here
+  // Cromwell will launch up to N submitted workflows at a time
   max-workflows-to-launch = 50
 
   // Number of seconds between workflow launches
