--- a/core/src/main/resources/application.conf
+++ b/core/src/main/resources/application.conf
@@ -55,8 +55,11 @@ system {
   // If 'true' then when Cromwell starts up, it tries to restart incomplete workflows
   workflow-restart = true
 
+  // Cromwell will cap the number of running workflows at N
+  max-workflows-running-at-once = 1
+
   // Cromwell will launch up to N submitted workflows at a time
-  max-workflows-to-launch = 50
+  max-workflows-to-launch-at-once = 2
 
   // Number of seconds between workflow launches
   new-workflow-poll-rate = 20
