--- a/core/src/main/resources/application.conf
+++ b/core/src/main/resources/application.conf
@@ -56,10 +56,10 @@ system {
   workflow-restart = true
 
   // Cromwell will cap the number of running workflows at N
-  max-workflows-running-at-once = 1
+  max-workflows-running-at-once = 5000
 
-  // Cromwell will launch up to N submitted workflows at a time
-  max-workflows-to-launch-at-once = 2
+  // Cromwell will launch up to N submitted workflows at a time, regardless of how many open workflow slots exist
+  max-workflows-to-launch-at-once = 50
 
   // Number of seconds between workflow launches
   new-workflow-poll-rate = 20
