--- a/core/src/main/resources/application.conf
+++ b/core/src/main/resources/application.conf
@@ -343,7 +343,7 @@ database {
       driver = "slick.driver.HsqldbDriver$"
       db {
         driver = "org.hsqldb.jdbcDriver"
-        url = "jdbc:hsqldb:mem:${slick.uniqueSchema};shutdown=false;hsqldb.tx=mvcc"
+        url = "jdbc:hsqldb:mem:${slick.uniqueSchema};shutdown=false;hsqldb.tx=mvcc;allow_empty_batch=true"
         connectionTimeout = 3000
       }
     }
