--- a/core/src/main/resources/application.conf
+++ b/core/src/main/resources/application.conf
@@ -161,7 +161,7 @@ engine {
 }
 
 backend {
-  default = "Local"
+  default = "Spark"
   providers {
     Local {
       actor-factory = "cromwell.backend.impl.sfs.config.ConfigBackendLifecycleActorFactory"
@@ -194,7 +194,37 @@ backend {
         }
       }
     }
+    Spark {
+      actor-factory = "cromwell.backend.impl.spark.SparkBackendFactory"
+      config {
+        // Root directory where Cromwell writes job results.  This directory must be
+        // visible and writeable by the Cromwell process as well as the jobs that Cromwell
+        // launches.
+        root: "cromwell-executions"
 
+        filesystems {
+          local {
+            // Cromwell makes a link to your input files within <root>/<workflow UUID>/workflow-inputs
+            // The following are strategies used to make those links.  They are ordered.  If one fails
+            // The next one is tried:
+            //
+            // hard-link: attempt to create a hard-link to the file
+            // copy: copy the file
+            // soft-link: create a symbolic link to the file
+            //
+            // NOTE: soft-link will be skipped for Docker jobs
+            localization: [
+              "hard-link", "soft-link", "copy"
+            ]
+          }
+          gcs {
+            // References an auth scheme defined in the `google` stanza.
+            auth = "application-default"
+          }
+        }
+      }
+
+    }
     //SGE {
     //  actor-factory = "cromwell.backend.impl.sfs.config.ConfigBackendLifecycleActorFactory"
     //  config {
